Header on Mobile Fixed Adjusted - logo

--- a/src/mediaQuery.css
+++ b/src/mediaQuery.css
@@ -96,7 +96,7 @@
     & .foot-col {
         img {
             cursor: pointer;
-            width: 80px;
+            width: 100px;
         }
     }
 }
